prometheus/manual_hacks/endpoint-prometheus-server.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: default-prometheus-server
subsets:
  - addresses:
      - ip: 192.168.1.20
    ports:
      - port: 30001
